maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:7: error: illegal start of simple expression
      case 1 => gauche();if(!estFaceMur()){avance()};else{keepHandOnSideWall()};if(getDirection() == Direction.NORTH)[etat = 0}
                                                                                                                     ^IslandMaze:16: error: expected class or object definition
def keepHandOnSideWall(){
^IslandMaze:27: error: Unmatched closing brace '}' ignored here
}
^